[gd_scene load_steps=42 format=3 uid="uid://cm4oqvbavrb5"]

[ext_resource type="Script" uid="uid://b37e2e6jqban6" path="res://scenes/classes/class_cabin_boy.gd" id="1_2x3va"]
[ext_resource type="PackedScene" uid="uid://douak1hhqrxde" path="res://scenes/health_component.tscn" id="2_1xypj"]
[ext_resource type="PackedScene" uid="uid://bytynuwe2o03l" path="res://scenes/gun.tscn" id="3_snvoy"]
[ext_resource type="Texture2D" uid="uid://b8v5lbwo6mxdv" path="res://resources/Spritesheets/sheet.png" id="4_fcnk4"]
[ext_resource type="Script" uid="uid://ci45gf8qjxjbi" path="res://scripts/ladder_collider.gd" id="5_3ysk6"]
[ext_resource type="Script" uid="uid://ddgkaydiq3yu0" path="res://scripts/classes/movement_component_cabin_boy.gd" id="6_2x3va"]
[ext_resource type="PackedScene" uid="uid://cgqtceerqhpbb" path="res://scenes/weapons/sword.tscn" id="7_e27ft"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gxk2l"]
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0eb65"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtn56"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ilk"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_coak4"]
atlas = ExtResource("4_fcnk4")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_52lhp"]
atlas = ExtResource("4_fcnk4")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ogw2"]
atlas = ExtResource("4_fcnk4")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5w7p"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dm5j"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybr68"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sax2w"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsl2x"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h06f2"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_npbeb"]
atlas = ExtResource("4_fcnk4")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbbhx"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ucqq"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_erxmv"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u1e3"]
atlas = ExtResource("4_fcnk4")
region = Rect2(144, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf7oe"]
atlas = ExtResource("4_fcnk4")
region = Rect2(192, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g2sh"]
atlas = ExtResource("4_fcnk4")
region = Rect2(240, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_krr3d"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_62vqc"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fed4"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sog2s"]
atlas = ExtResource("4_fcnk4")
region = Rect2(144, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h3ra"]
atlas = ExtResource("4_fcnk4")
region = Rect2(192, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae82s"]
atlas = ExtResource("4_fcnk4")
region = Rect2(240, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi2fc"]
atlas = ExtResource("4_fcnk4")
region = Rect2(0, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_264pm"]
atlas = ExtResource("4_fcnk4")
region = Rect2(48, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_165ke"]
atlas = ExtResource("4_fcnk4")
region = Rect2(96, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vsyl"]
atlas = ExtResource("4_fcnk4")
region = Rect2(144, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65era"]
atlas = ExtResource("4_fcnk4")
region = Rect2(192, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v22t"]
atlas = ExtResource("4_fcnk4")
region = Rect2(240, 576, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_i5w7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eb65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtn56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ilk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coak4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52lhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ogw2")
}],
"loop": true,
"name": &"climb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5w7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dm5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybr68")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sax2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsl2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h06f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npbeb")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbbhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ucqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erxmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u1e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf7oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g2sh")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_krr3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62vqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fed4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sog2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h3ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae82s")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi2fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_264pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_165ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vsyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65era")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v22t")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd0ad"]
size = Vector2(16, 16)

[node name="cabin_boy" type="CharacterBody2D"]
top_level = true
collision_layer = 4
collision_mask = 19
script = ExtResource("1_2x3va")

[node name="health_component" parent="." instance=ExtResource("2_1xypj")]

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_gxk2l")

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0.966351, 0.273706, 1)
texture_filter = 1
position = Vector2(0, -22)
scale = Vector2(1.303, 1.303)
sprite_frames = SubResource("SpriteFrames_i5w7p")
animation = &"damage"
autoplay = "idle"
frame = 2
frame_progress = 1.0
offset = Vector2(7.57895, -6.94737)

[node name="ladder_collider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource("5_3ysk6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder_collider"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_fd0ad")

[node name="movement_component" type="Node" parent="."]
script = ExtResource("6_2x3va")
walk_max_speed = 250.0
run_max_speed = 500.0

[node name="dashTimer" type="Timer" parent="movement_component"]
wait_time = 0.05
one_shot = true

[node name="dashCooldown" type="Timer" parent="movement_component"]
one_shot = true

[node name="weapon_point" type="Node2D" parent="."]
position = Vector2(0, -27)

[node name="sword" parent="weapon_point" instance=ExtResource("7_e27ft")]

[node name="gun" parent="weapon_point" instance=ExtResource("3_snvoy")]

[connection signal="body_entered" from="ladder_collider" to="." method="_on_ladder_collider_body_entered"]
[connection signal="body_exited" from="ladder_collider" to="." method="_on_ladder_collider_body_exited"]
[connection signal="timeout" from="movement_component/dashTimer" to="movement_component" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="movement_component/dashCooldown" to="movement_component" method="_on_dash_cooldown_timeout"]
